fix: main contents align center

--- a/src/assets/Layout.module.scss
+++ b/src/assets/Layout.module.scss
@@ -1,7 +1,15 @@
 .layout {
-  padding-top: 80px;
+  //padding-top: 80px;
+  width: 380px;
+  background-color: white;
+  margin:0 auto;
 }
 
 .main {
   min-height: calc(100vh - 180px);
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 10px;
 }
